--- a/UTSAV/contact-us.html
+++ b/UTSAV/contact-us.html
@@ -205,7 +205,7 @@
               <div class="contact-panel d-flex flex-wrap">
                 <div class="contact-panel__info con-im">
                   <div class="back-con">
-                    <img src="./assets/images/backgrounds/12.jpg" alt="banner"/>
+                    <img src="./12.jpg" alt="banner"/>
                    </div>
                   <!--  -->
                 </div>
