--- a/UTSAV/industry.html
+++ b/UTSAV/industry.html
@@ -164,7 +164,7 @@
     =========================== -->
     <section class="page-title page-title-layout10 text-center bg-overlay bg-overlay-gradient bg-parallax">
         <div class="bg-img">
-          <img src="assets/images/page-titles/22.jpg" alt="backgrounds">
+          <img src="./22.jpg" alt="backgrounds">
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-6">
