--- a/UTSAV/it-solutions.html
+++ b/UTSAV/it-solutions.html
@@ -170,7 +170,7 @@
       <section
         class="page-title page-title-layout9 bg-overlay bg-overlay-gradient bg-parallax">
         <div class="bg-img">
-          <img src="assets/images/page-titles/8.jpg" alt="background" />
+          <img src="./20.jpg" alt="background" />
         </div>
         <div class="container">
           <div class="row">
