--- a/UTSAV/service-5.html
+++ b/UTSAV/service-5.html
@@ -154,7 +154,7 @@
        page title
     =========================== -->
     <section class="page-title page-title-layout10 text-center bg-overlay bg-overlay-gradient bg-parallax">
-      <div class="bg-img"><img src="assets/images/page-titles/15.jpg" alt="background"></div>
+      <div class="bg-img"><img src="./11.jpg" alt="background"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
@@ -239,7 +239,7 @@
           </div><!-- /.col-xl-5 -->
           <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5 offset-xl-1">
             <div class="sticky-top">
-              <img src="assets/images/gallery/4.jpg" alt="banner">
+              <img src="./4.jpg" alt="banner">
             </div>
           </div><!-- /col-lg-5 -->
         </div><!-- /.row -->
