--- a/UTSAV/about-us.html
+++ b/UTSAV/about-us.html
@@ -152,7 +152,7 @@
        page title
     =========================== -->
         <section class="page-title page-title-layout1 bg-overlay bg-overlay-gradient bg-parallax text-center">
-            <div class="bg-img"><img src="assets/images/page-titles/1.jpg" alt="background"></div>
+            <div class="bg-img"><img src="./10.jpg" alt="background"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
@@ -230,11 +230,8 @@
 
                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
                         <div class="about__img mb-40">
-                            <img src="assets/images/about/1.jpg" alt="about">
-                            <blockquote class="blockquote mb-0">
-                                <h4 class="blockquote__title"> You are helping to lead the charge; we can help you build on your past successes and prepare for your great future.
-                                </h4>
-                            </blockquote>
+                            <img src="./6.avif" alt="about">
+                            
                         </div>
                         <!-- /.about-img -->
                     </div>
