--- a/UTSAV/confidentiality.html
+++ b/UTSAV/confidentiality.html
@@ -158,7 +158,7 @@
        page title
     =========================== -->
     <section class="page-title page-title-layout6 bg-overlay bg-overlay-gradient bg-parallax text-center">
-      <div class="bg-img"><img src="assets/images/gallery/13.jpg" alt="backgrounds"></div>
+      <div class="bg-img"><img src="./13.jpg" alt="backgrounds"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
