--- a/UTSAV/index.html
+++ b/UTSAV/index.html
@@ -136,7 +136,7 @@
         data-slick='{"slidesToShow": 1, "arrows": true, "dots": true, "speed": 700,"fade": true,"cssEase": "linear"}'>
         <div class="slide-item align-v-h bg-overlay bg-overlay-gradient">
           <div class="bg-img">
-            <img src="assets/images/sliders/4.jpg" alt="slide img" />
+            <img src="./4.jpg" alt="slide img" />
           </div>
           <div class="container">
             <div class="row align-items-center">
@@ -161,7 +161,7 @@
         <!-- /.slide-item 1 -->
         <div class="slide-item align-v-h bg-overlay">
           <div class="bg-img">
-            <img src="assets/images/sliders/17.jpg" alt="slide img" />
+            <img src="./17.jpg" alt="slide img" />
           </div>
           <div class="container"> 
             <div class="row align-items-center">
@@ -185,7 +185,7 @@
 
         <div class="slide-item align-v-h bg-overlay">
           <div class="bg-img">
-            <img src="./assets/images/sliders/15.jpg" alt="slide img" />
+            <img src="./15.jpg" alt="slide img" />
           </div>
           <div class="container">
             <div class="row align-items-center">
@@ -306,7 +306,7 @@
           <div class="contact-panel d-flex flex-wrap">
             <div class="contact-panel__info ">
               <div class="back-con">
-                <img src="./assets/images/backgrounds/12.jpg" alt="banner" />
+                <img src="./12.jpg" alt="banner" />
               </div>
               <div class="contact-block">
                 
