--- a/UTSAV/service-2.html
+++ b/UTSAV/service-2.html
@@ -153,7 +153,7 @@
        page title
     =========================== -->
     <section class="page-title page-title-layout10 text-center bg-overlay bg-overlay-gradient bg-parallax">
-      <div class="bg-img"><img src="assets/images/page-titles/9.jpeg" alt="background"></div>
+      <div class="bg-img"><img src="./9.jpeg" alt="background"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
@@ -260,7 +260,7 @@
           </div><!-- /.col-xl-5 -->
           <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5 offset-xl-1">
             <div class="sticky-top">
-              <img src="assets/images/about/3.jpg" alt="banner">
+              <img src="./3.jpg" alt="banner">
             </div>
           </div><!-- /col-lg-5 -->
         </div><!-- /.row -->
