--- a/UTSAV/service-4.html
+++ b/UTSAV/service-4.html
@@ -154,7 +154,7 @@
        page title
     =========================== -->
     <section class="page-title page-title-layout10 text-center bg-overlay bg-overlay-gradient bg-parallax">
-      <div class="bg-img"><img src="assets/images/page-titles/14.png" alt="backgrounds"></div>
+      <div class="bg-img"><img src="./14.png" alt="backgrounds"></div>
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 offset-xl-3">
@@ -266,7 +266,7 @@
           </div><!-- /.col-xl-5 -->   
           <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5 offset-xl-1">
             <div class="sticky-top">
-              <img src="assets/images/about/5.jpg" alt="banner">
+              <img src="./6.jpg" alt="banner">
             </div>
           </div><!-- /col-lg-5 -->
         </div> 
